[package]
name = "gtacheese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# winapi = { version = "0.3.9", features = ["libloaderapi", "minwindef", "processthreadsapi", "psapi", "winnt", "consoleapi", "fileapi", "handleapi", "processenv", "winbase", "wincon"] }
env_logger = "0.11.3"
log = "0.4.21"

[dependencies.windows]
version = "0.57.0"
features = ["Win32_System_Console", 
            "Win32_System_LibraryLoader",
            "Win32_System_SystemServices",
            "Win32_System_Threading",
            "Win32_Security",
            "Win32_System_Memory"]

[lib]
crate-type = ["cdylib"]