[package]
name = "gtacheese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# winapi = { version = "0.3.9", features = ["libloaderapi", "minwindef", "processthreadsapi", "psapi", "winnt", "consoleapi", "fileapi", "handleapi", "processenv", "winbase", "wincon"] }
env_logger = "0.11.3"
log = "0.4.21"
anyhow = "1.0.86"
thiserror = "1.0.61"
ansi_term = "0.12.1"
lazy_static = "1.4.0"
capstone = "0.12.0"
static_assertions = "1.1.0"

[dependencies.windows]
version = "0.57.0"
features = ["Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"]

[lib]
crate-type = ["cdylib"]